# cmake_gtest

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  calc.cpp  calc.h  main.cpp
test/: CMakeLists.txt  test_calc.cpp
